@@ -173,6 +173,7 @@ VERSION 0.3.2
 ________________________________________________________________________________
 VERSION 0.3.3
   * New module: Text messages history storing
+  * NEW FEATURE: File explorer for file selection on supporting mobiles
   * There now is a back (cancel) option on the options pages
   * New option: Auto connect on startup
   * A message how to disable keylock is shown on splash screen if trying it the wrong way
